--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -12,5 +12,22 @@
   </tr>
 </table>
 
+<table class="table table-bordered">
+  <% @tag_number = 1 %>
+  <% @blog.comments.each do |comment| %>
+  <tr>
+    <th><%= @tag_number %>. <%= comment.name %></th>
+  </tr>
+  <tr>
+    <td>
+      <%= safe_join(comment.content.split("\n"),tag(:br)) %><br><br>
+      <%= l comment.created_at, format: :short %>
+    </td>
+  </tr>
+  <% @tag_number += 1 %>
+  <% end %>
+</table>
+
+
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
 <%= link_to 'Back', blogs_path %>
