コメントにリンク機能を追加

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -16,7 +16,7 @@
       <%= link_to "削除", blog_path(blog.id),
               method: :delete, data: { confirm: "本当に削除しますか" }%>
       <%  if blog.comments.size > 0 %>
-      <%= blog.comments.size%>件のコメント
+      <%= link_to "#{blog.comments.size}件のコメント", blog_path(blog.id)%>
       <% end %>
     </td>
   </tr>
