--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>ブログ一覧</h1>
+<h1 class="test">ブログ一覧</h1>
 <p><%= notice %></p>
 <table class="table table-bordered">
 <% @blogs.order(created_at: "DESC").each do |blog| %>
